--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
 
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tlayout"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
+                android:maxWidth="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
