--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,24 +10,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        tools:ignore="MissingClass">
 
 
-        <ImageView
+
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imageView"
             android:layout_width="150dp"
-            android:layout_height="200dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:src="@drawable/me"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="MissingConstraints" />
 
+
         <TextView
             android:id="@+id/textView"
-            android:layout_width="217dp"
-            android:layout_height="173dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="24dp"
+            android:layout_width="226dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="40dp"
             android:fontFamily="monospace"
             android:gravity="center"
             android:text="No matter what you do in life, just know that nothing hurts forever, and nothing is hard forever... Be consistent."
@@ -51,16 +58,10 @@
             tools:ignore="MissingConstraints" />
 
 
-<!--        <androidx.core.widget.NestedScrollView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="10dp"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/name"-->
-<!--            tools:ignore="MissingConstraints">-->
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="5dp"
             android:layout_marginBottom="24dp"
             android:fillViewport="true"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -77,9 +78,9 @@
                 android:layout_marginTop="10dp"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 app:layout_constraintTop_toBottomOf="@+id/name"
+                tools:listitem="@layout/home_list"
                 tools:ignore="MissingConstraints" />
         </ScrollView>
-        <!--        </androidx.core.widget.NestedScrollView>-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
