--- a/app/src/main/res/layout/home_list.xml
+++ b/app/src/main/res/layout/home_list.xml
@@ -6,7 +6,7 @@
     android:layout_marginTop="12dp"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    android:id="@+id/ll"
+    android:id="@+id/linear"
     card_view:cardBackgroundColor="#FFFF"
     card_view:cardCornerRadius="8dp"
     card_view:contentPadding="10dp"
